--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <h1>KPI Schedule</h1>
             <p class="subtitle">Найзручніший розклад для студентів КПІ. Жодної реклами.</p>
             
-            <a href="app-release.apk" class="download-btn" download>
+            <a href="KpiSchedule.apk" class="download-btn" download>
                 <svg viewBox="0 0 24 24"><path d="M3,20.5V23.5H21.92V20.5H3M15.29,15.82L13.79,17.32L17.58,21.11H12.37V19.16H11.5V21.11H7.34L11.13,17.32L9.63,15.82L5.84,19.61L2.05,15.82L3.55,14.32L7.34,18.11V2H17.58V18.11L21.37,14.32L22.87,15.82L19.08,19.61L15.29,15.82Z" /></svg>
                 Завантажити APK
             </a>
@@ -181,4 +181,5 @@
     </div>
 
 </body>
+
 </html>
