Update fmt.Println output from 'Hello World'

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                 </div>
 
                 <div class="flex gap-6 text-slate-400">
-                    <a href="privacy_policy.html" class="hover:text-white transition">Політика конфіденційності</a>
+                    <a href="https://github.com/nouname123/kpi-schedule-app/blob/main/PRIVACY_POLICY.md" class="hover:text-white transition">Політика конфіденційності</a>
                     <a href="https://t.me/diimkkaa" target="_blank" class="hover:text-white transition">Підтримка</a>
                 </div>
 
@@ -403,7 +403,7 @@
             </div>
             
             <div class="mt-8 pt-8 border-t border-white/5 text-center text-slate-600 text-xs">
-                &copy; 2025 KpiSchedule. Created by @diimkkaa
+                &copy; 2026 KpiSchedule. Created by @diimkkaa
             </div>
         </div>
     </footer>
@@ -453,6 +453,10 @@
 				question: "Як звернутися до служби підтримки?",
 				answer: "Якщо у вас виникли проблеми з роботою застосунку або є запитання, ви можете звернутися до служби підтримки. Кнопка підтримки розташована внизу сторінки та веде до Telegram-чату розробника."
             }
+			{
+				question: "Як відкрити посилання на пару на комп’ютері?",
+				answer: "Підключіть телефон до комп’ютера за допомогою застосунку Link to Windows. Після цього натисніть кнопку «Поділитися» та виберіть свій комп’ютер — посилання для підключення на пару відкриється автоматично."
+			}
 		];
 
 
@@ -489,4 +493,5 @@
         }
     </script>
 </body>
+
 </html>
